# agent-proof

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: product-positioning-v0.1.0.md  v0.1.0-spec.md
examples/: delivery-report.md  task.json  task.zh.json  transcript.txt  transcript.zh.txt
src/agentproof/: cli.py  errors.py  git_reader.py  redaction.py  report_generator.py  task_reader.py  transcript_reader.py
tests/: conftest.py  test_cli.py  test_git_reader.py  test_redaction.py  test_report_generator.py  test_smoke.py  test_task_reader.py  test_transcript_reader.py
