[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproof"
version = "0.1.0"
description = "Local delivery evidence and acceptance report generator for AI-assisted software development."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "AgentProof contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentproof = "agentproof.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
