[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproof"
version = "0.1.0"
description = "Local delivery evidence and acceptance report generator for AI-assisted software development."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "AgentProof contributors" }
]
dependencies = []
keywords = ["cli", "delivery", "evidence", "ai-assisted-development", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/lyj012/agent-proof"
Repository = "https://github.com/lyj012/agent-proof"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentproof = "agentproof.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
